--- a/app/Resources/views/genus/list.html.twig
+++ b/app/Resources/views/genus/list.html.twig
@@ -13,7 +13,7 @@
         {% for genus in genuses %}
             <tr>
                 <td>
-                    <a href="{{ path('genus_show', {'genusName': genus.name}) }}">
+                    <a href="{{ path('genus_show', {'name': genus.name}) }}">
                     {{ genus.name }}
                     </a>
                 </td>
