--- a/app/Resources/views/genus/show.html.twig
+++ b/app/Resources/views/genus/show.html.twig
@@ -12,9 +12,9 @@
                 <dt>Subfamily:</dt>
                 <dd>{{ genus.subFamily }}</dd>
                 <dt>Known Species:</dt>
-                <dd>{{ genus.speciesCount | number_format }}</dd>
+                <dd>{{ genus.speciesCount|number_format }}</dd>
                 <dt>Fun Fact:</dt>
-                <dd>{{ genus.funFact }}</dd>
+                <dd>{{ genus.funFact|markdownify }}</dd>
                 <dt>Recent notes:</dt>
                 <dd>{{ recentNoteCount }}</dd>
             </dl>
