--- a/app/Resources/views/genus/list.html.twig
+++ b/app/Resources/views/genus/list.html.twig
@@ -3,24 +3,24 @@
 {% block body %}
     <table class="table table-striped">
         <thead>
-        <tr>
-            <th>Genus</th>
-            <th># of species</th>
-            <th>Last Updated</th>
-        </tr>
+            <tr>
+                <th>Genus</th>
+                <th># of species</th>
+                <th>Last updated</th>
+            </tr>
         </thead>
         <tbody>
-        {% for genus in genuses %}
-            <tr>
-                <td>
-                    <a href="{{ path('genus_show', {'name': genus.name}) }}">
-                    {{ genus.name }}
-                    </a>
-                </td>
-                <td>{{ genus.speciesCount }}</td>
-                <td>{{ genus.updatedAt|date('Y-m-d') }}</td>
-            </tr>
-        {% endfor %}
+            {% for genus in genuses %}
+                <tr>
+                    <td>
+                        <a href="{{ path('genus_show', {'genusName': genus.name}) }}">
+                            {{ genus.name }}
+                        </a>
+                    </td>
+                    <td>{{ genus.speciesCount }}</td>
+                    <td>{{ genus.updatedAt|date('Y-m-d') }}</td>
+                </tr>
+            {% endfor %}
         </tbody>
     </table>
 {% endblock %}
