--- a/app/Resources/views/admin/genus/edit.html.twig
+++ b/app/Resources/views/admin/genus/edit.html.twig
@@ -4,8 +4,8 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <h1>New Genus</h1>
-                {{ include ('admin/genus/_form.html.twig') }}
+                <h1>Edit Genus</h1>
+                {{ include('admin/genus/_form.html.twig') }}
             </div>
         </div>
     </div>
