--- a/app/Resources/views/admin/genus/formLayout.html.twig
+++ b/app/Resources/views/admin/genus/formLayout.html.twig
@@ -12,11 +12,10 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.0/js/bootstrap-datepicker.min.js"></script>
 
     <script>
-      jQuery(document).ready(function() {
-        $('.js-datepicker').datepicker({
-            format: 'yyyy/mm/dd'
-          }
-        );
-      });
+        jQuery(document).ready(function() {
+            $('.js-datepicker').datepicker({
+                format: 'yyyy-mm-dd'
+            });
+        });
     </script>
 {% endblock %}
