Start SF3.3 updgrade course

--- a/app/Resources/views/main/homepage.html.twig
+++ b/app/Resources/views/main/homepage.html.twig
@@ -2,6 +2,7 @@
 
 {% block body %}
     <h1 class="page-header text-center">
-        Welcome {{ app.user ? app.user.username : 'Aquanauts' }}!
+        Welcome
+        {{ app.user ? app.user.email : 'Aquanauts' }}!
     </h1>
 {% endblock %}
