--- a/app/Resources/views/user/register.html.twig
+++ b/app/Resources/views/user/register.html.twig
@@ -6,17 +6,17 @@
             <div class="col-xs-12">
                 <h1>Register!</h1>
 
-                {{  form_start(form) }}
-                  {{ form_row(form.email) }}
-                  {{ form_row(form.plainPassword.first, {
-                      'label': 'Password'
-                  }) }}
-                  {{ form_row(form.plainPassword.second, {
-                      'label': 'Repeat Password'
-                  }) }}
-                  <button type="submit" class="btn btn-success" formnovalidate>Register</button>
-                {{  form_end(form) }}
+                {{ form_start(form) }}
+                    {{ form_row(form.email) }}
+                    {{ form_row(form.plainPassword.first, {
+                        'label': 'Password'
+                    }) }}
+                    {{ form_row(form.plainPassword.second, {
+                        'label': 'Repeat Password'
+                    }) }}
 
+                    <button type="submit" class="btn btn-primary" formnovalidate>Register</button>
+                {{ form_end(form) }}
             </div>
         </div>
     </div>
